--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "chart.js": "^2.9.4",
+    "google-map-react": "^2.1.9",
+    "leaflet": "^1.7.1",
     "numeral": "^2.0.6",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.14.0",
+    "react-google-maps": "^9.4.5",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
