--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.14.0",
     "react-google-maps": "^9.4.5",
+    "react-map-gl": "^5.2.10",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
